@@ -120,16 +120,22 @@ infologfile:silcd.log:10000
 #
 # Format: <remote host>:<auth method>:<auth data>:<port>:<class>
 #
+# The <auth data> is either passphrase or file path to the public key
+# file.
+#
 [ClientConnection]
 :::1333:1
 
 #
 # Configured server administrator connections
 #
-# Format: <host>:<auth method>:<auth data>:<nickname hash>:<class>
+# Format: <host>:<username>:<nickname>:<auth method>:<auth data>
+#
+# The <auth data> is either passphrase or file path to the public key
+# file.
 #
 [AdminConnection]
-10.2.1.199:passwd:veryscret:XXX:1
+10.2.1.199:priikone:pekka:passwd:veryscret
 
 #
 # Configured server connections.
@@ -140,6 +146,9 @@ infologfile:silcd.log:10000
 # your server is router, this must be configured.
 #
 # Format: <remote host>:<auth method>:<auth data>:<port>:<version ID>:<vlass>
+#
+# The <auth data> is either passphrase or file path to the public key
+# file.
 #
 [ServerConnection]
 10.2.1.7:passwd:veryscret:706:1:1
@@ -153,6 +162,9 @@ infologfile:silcd.log:10000
 # configured connection is the primary route.
 #
 # Format: <remote host>:<auth method>:<auth data>:<port>:<version ID>:<class>:<initiator>
+#
+# The <auth data> is either passphrase or file path to the public key
+# file.
 #
 [RouterConnection]
 #10.2.1.100:passwd:veryverysecret:706:1:1:1
